# Project-A1

./: .gitignore  DOCUMENTATION.md  README.md  README.mdx  SYSTEM_PROMPT.md  VISION_SYSTEM_PROMPT.md  main.py  mcp_config.json  requirements.txt  setup.sh  upgrade.sh  voice_config.json
A1/: DOCUMENTATION.md  Modelfile_Router  README.md  SYSTEM_PROMPT.md  main.py  mcp_config.json  mcp_server_local.py  requirements.txt
A1/core/: adaptive_asr.py  brain.py  hotkeys.py  listen.py  memory.py  overlay.py  router.py  speak.py  speaker_embed.py  voice_enroll.py  wake.py
A1/docs/: 00_Index.md.md
A1/gui-overlay/: README.md
A1/gui-overlay/src-tauri/: Cargo.toml
A1/gui-overlay/src-tauri/capabilities/: default.json
A1/scripts/: adaptive_tuning.py  view_memory.py
A1/skills/: app_control.py  arch.py  automation.py  news.py  personal_assistant.py  weather.py  web.py
core/: adaptive_asr.py  brain.py  listen.py  listen_whisper.py  mcp_manager.py  memory.py  overlay.py  router.py  speak.py  vision.py  wake.py
docs/: 00_Index.md.md
docs/.obsidian/: community-plugins.json  graph.json  workspace.json
docs/.smart-env/: smart_env.json
docs/Core/: Core_Brain_LLM.md.md  Core_Memory.md.md  Core_Router.md.md  Core_TTS.md.md
docs/Daily_Logs/: 2026-01-18.md
docs/Design/: Design_Decisions.md.md
docs/Excalidraw/: Drawing 2026-01-18 09.48.56.excalidraw.md
docs/Guides/: Obsidian_Setup.md.md
docs/Operations/: Installation.md.md
docs/Roadmap/: Roadmap.md.md
docs/Skills/: Skill_App_Control.md.md  Skill_Arch_Linux.md.md  (+1 more)
skills/: app_control.py  arch.py  foss.py  web.py
(+48 files in other folders)
